# Arch-Installer

./: Build.sh  Cargo.toml  Dockerfile  README.md  TestRun  docker-compose.yml
src/: layouts.txt  main.rs  timezones.txt
